--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "3.0.7"
+clap = { version = "3.1.6", features = ["derive"] }
 bit-vec = "0.6.3"
 itertools = "0.10.3"
